=======
Changes
=======

After 3.4.0a1
=============

 - Added BeforeObjectAssignedEvent that is triggered before the object field
   sets a value.


Before 3.4
==========

This package was part of the Zope 3 distribution and did not have its own
CHANGES.txt. For earlier changes please refer to either our subversion log or
the CHANGES.txt of earlier Zope 3 releases.