@@ -1,6 +1,9 @@
 =======
 Changes
 =======
+Next Version
+------------
+-  zope.schema now works on Python2.5
 
 After 3.4.0a1
 =============
